Working, no DMA, Variable comm speed by USB

--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
@@ -3,9 +3,9 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.15.0.9
+IDE-Version: ¦ÌVision V5.15.0.9
 Copyright (C) 2015 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: aa ad, fa, LIC=MGXJJ-U4UHM-68WFC-7NZ1T-VAYN2-KRDLA
+License Information: aa a@a.cc, ad, LIC=TA3Z9-4DYZD-YBXE9-41RCU-25WIT-A9T3Q
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.15.0
@@ -21,35 +21,35 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.15.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
-C:\Code\uC\Stm32_labgadgets\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
+D:\Program\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
 Project File Date:  03/06/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F723_HighSpeed_USB_Bridge'
-compiling main.c...
+compiling usbd_cdc_if.c...
 linking...
-Program Size: Code=21136 RO-data=544 RW-data=372 ZI-data=21996  
+Program Size: Code=21272 RO-data=544 RW-data=372 ZI-data=21996  
 FromELF: creating hex file...
 "STM32F723_HighSpeed_USB_Bridge\STM32F723_HighSpeed_USB_Bridge.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.4.0.pack
-                ARM::CMSIS:CORE:5.1.2
+                http://www.keil.com/pack/ARM.CMSIS.4.5.0.pack
+                ARM::CMSIS:CORE:4.3.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.1.2
+   * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Code\uC\Stm32_labgadgets\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.4.0\CMSIS\Core\Include
+  D:\Program\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
+  C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F7xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F7xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:02
+   * Component: ARM::CMSIS:CORE:4.3.0
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
