--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
@@ -21,15 +21,50 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.15.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
-D:\Program\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
+D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
 Project File Date:  03/06/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F723_HighSpeed_USB_Bridge'
+assembling startup_stm32f723xx.s...
+compiling dataMGR.c...
+compiling stm32f7xx_it.c...
+compiling usb_device.c...
+compiling usbd_conf.c...
+compiling usbd_desc.c...
 compiling usbd_cdc_if.c...
+compiling stm32f7xx_hal_msp.c...
+compiling main.c...
+compiling stm32f7xx_hal_timebase_tim.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_sai.c...
+compiling stm32f7xx_hal_sai_ex.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_uart.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling system_stm32f7xx.c...
+compiling usbd_core.c...
+compiling usbd_ctlreq.c...
+compiling usbd_ioreq.c...
+compiling usbd_cdc.c...
 linking...
-Program Size: Code=21272 RO-data=544 RW-data=372 ZI-data=21996  
+Program Size: Code=21300 RO-data=544 RW-data=372 ZI-data=21996  
 FromELF: creating hex file...
 "STM32F723_HighSpeed_USB_Bridge\STM32F723_HighSpeed_USB_Bridge.axf" - 0 Error(s), 0 Warning(s).
 
@@ -42,14 +77,14 @@ Package Vendor: ARM
    * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  D:\Program\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
+  D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F7xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F7xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:44
 </pre>
 </body>
 </html>
