--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
@@ -22,12 +22,47 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
-Project File Date:  05/23/2019
+Project File Date:  05/25/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F723_HighSpeed_USB_Bridge'
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_hal_timebase_tim.c...
+compiling dataMGR.c...
+compiling stm32f7xx_it.c...
+compiling usb_device.c...
+compiling usbd_desc.c...
+compiling CE32_ioncom.c...
+compiling usbd_conf.c...
+compiling usbd_cdc_if.c...
+compiling stm32f7xx_hal_msp.c...
 compiling main.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_uart.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal.c...
+compiling system_stm32f7xx.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling usbd_ioreq.c...
+compiling stm32f7xx_hal_exti.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling usbd_cdc.c...
+compiling usbd_core.c...
+compiling usbd_ctlreq.c...
+compiling stm32f7xx_hal_i2c.c...
 linking...
 Program Size: Code=26272 RO-data=544 RW-data=396 ZI-data=59612  
 FromELF: creating hex file...
@@ -54,7 +89,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:46
 </pre>
 </body>
 </html>
