--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
@@ -22,50 +22,14 @@ Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
 D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
-Project File Date:  07/10/2019
+Project File Date:  07/18/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F723_HighSpeed_USB_Bridge'
-assembling startup_stm32f723xx.s...
-compiling dataMGR.c...
-compiling CE32_ioncom.c...
 compiling main.c...
-compiling usb_device.c...
-compiling usbd_conf.c...
-compiling usbd_desc.c...
-compiling usbd_cdc_if.c...
-compiling stm32f7xx_it.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_hal_timebase_tim.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling system_stm32f7xx.c...
-compiling usbd_core.c...
-compiling usbd_ctlreq.c...
-compiling usbd_ioreq.c...
-compiling usbd_cdc.c...
 linking...
-Program Size: Code=26468 RO-data=544 RW-data=396 ZI-data=59612  
+Program Size: Code=26640 RO-data=544 RW-data=396 ZI-data=59676  
 FromELF: creating hex file...
 "STM32F723_HighSpeed_USB_Bridge\STM32F723_HighSpeed_USB_Bridge.axf" - 0 Error(s), 0 Warning(s).
 
@@ -80,11 +44,12 @@ Package Vendor: ARM
 <h2>Collection of Component include folders:</h2>
   D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.5.1\CMSIS\Core\Include
+  C:\Keil_v5\ARM\PACK\Keil\STM32F7xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F7xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:02:16
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
