--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/MDK-ARM/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.build_log.htm
@@ -3,31 +3,67 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.15.0.9
-Copyright (C) 2015 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: zifang surface, GLZB, LIC=5859U-S5DXW-X6NQZ-J6F87-5YISK-UIVBI
+IDE-Version: µVision V5.27.1.0
+Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: a x, @1, LIC=TA3Y8-33AT9-9X5UW-Q9IKL-HYESN-MWVAK
  
 Tool Versions:
-Toolchain:       MDK-ARM Standard  Version: 5.15.0
+Toolchain:       MDK-ARM Professional  Version: 5.27.1.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.05 update 2 (build 169)
-Assembler:       Armasm.exe V5.05 update 2 (build 169)
-Linker/Locator:  ArmLink.exe V5.05 update 2 (build 169)
-Library Manager: ArmAr.exe V5.05 update 2 (build 169)
-Hex Converter:   FromElf.exe V5.05 update 2 (build 169)
-CPU DLL:         SARMCM3.DLL V5.15.0
-Dialog DLL:      DCM.DLL V1.13.2.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.15.0_KEIL
-Dialog DLL:      TCM.DLL V1.14.5.0
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
+CPU DLL:         SARMCM3.DLL V5.27.1.0
+Dialog DLL:      DCM.DLL V1.17.2.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
+Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\STM32F723_HighSpeed_USB_Bridge.uvprojx
-Project File Date:  07/18/2019
+Project File Date:  08/01/2019
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F723_HighSpeed_USB_Bridge'
+assembling startup_stm32f723xx.s...
+compiling dataMGR.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_hal_timebase_tim.c...
+compiling stm32f7xx_hal_msp.c...
+compiling CE32_ioncom.c...
+compiling usbd_desc.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_it.c...
+compiling usbd_cdc_if.c...
+compiling usb_device.c...
+compiling usbd_conf.c...
 compiling main.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling stm32f7xx_hal_uart.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling system_stm32f7xx.c...
+compiling usbd_ctlreq.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal_exti.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling usbd_core.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling usbd_cdc.c...
+compiling usbd_ioreq.c...
 linking...
 Program Size: Code=26640 RO-data=544 RW-data=396 ZI-data=59676  
 FromELF: creating hex file...
@@ -37,19 +73,24 @@ FromELF: creating hex file...
 
 Package Vendor: ARM
                 http://www.keil.com/pack/ARM.CMSIS.5.5.1.pack
-                ARM::CMSIS:CORE:5.2.0
+                ARM.CMSIS.5.5.1
                 CMSIS (Cortex Microcontroller Software Interface Standard)
    * Component: CORE Version: 5.2.0
 
+Package Vendor: Keil
+                http://www.keil.com/pack/Keil.STM32F7xx_DFP.2.11.0.pack
+                Keil.STM32F7xx_DFP.2.11.0
+                STMicroelectronics STM32F7 Series Device Support, Drivers and Examples
+
 <h2>Collection of Component include folders:</h2>
-  D:\code\uC\STM32_LabGadgets\STM32F723_LabGadgets\STM32F723_HighSpeed_USB_Bridge\MDK-ARM\RTE
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.5.1\CMSIS\Core\Include
-  C:\Keil_v5\ARM\PACK\Keil\STM32F7xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F7xx\Include
+  .\RTE\_STM32F723_HighSpeed_USB_Bridge
+  D:\Program Files (x86)\Keil\Packs\ARM\CMSIS\5.5.1\CMSIS\Core\Include
+  D:\Program Files (x86)\Keil\Packs\Keil\STM32F7xx_DFP\2.11.0\Drivers\CMSIS\Device\ST\STM32F7xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:40
 </pre>
 </body>
 </html>
